<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about_collage"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_collage"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/darkbackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/text_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments"
                        android:layout_marginTop="16dp"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#fff"
                        android:fontFamily="@string/bold"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        app:cardBackgroundColor="#fff">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Computer science"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="8dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Mechanical Department"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="8dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Electrical Department"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="8dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Civil Department"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="8dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey1"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="24dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collagename"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collageaddress"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Phone no :- +91 9351227817 \n +91 141 2235940"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" EmailId :- sbnitm@gmail.com "
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/mapsbnitm"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>